--- a/h04/kontakt.html
+++ b/h04/kontakt.html
@@ -6,11 +6,10 @@
         <title>Harjutus04</title>
         <meta name="keywords" content="HTML,CSS,HTML5,CSS3">
         <meta name="author" content="Jarno Orusalu IT-23">
-        <link rel="shortcut icon" href="../pildid/favicon.ico">
     </head>
 <body>
     <div class="header">
-        <h1>plaas.ee</h1>
+        <h1>orusalu.ee</h1>
         <nav>
             <a href="index.html">Avaleht</a>
             <a href="teenused.html">Teenused</a> 
