--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Avaleht</title>
         <meta name="keywords" content="HTML,CSS,HTML5,CSS3">
         <meta name="author" content="Jarno Orusalu IT-23">
-        <link rel="shortcut icon" href="../pildid/favicon.ico">
     </head>
 <body>
     <div class="header">
@@ -23,7 +22,7 @@
         </nav>
     </div>
     <div class="footer">
-        <p>&copy; 2025 <a href="" target="_blank">jarno-IT23.github.io</a></p>
+        <p>&copy; 2025 <a href="https://github.com/JARNO-IT23/html" target="_blank">jarno-IT23.github.io</a></p>
     </div>
 </body>
 </html>
