--- a/kt.html
+++ b/kt.html
@@ -6,11 +6,10 @@
         <title>Iseseisevtöö</title>
         <meta name="keywords" content="HTML,CSS,HTML5,CSS3">
         <meta name="author" content="Jarno Orusalu IT-23">
-        <link rel="shortcut icon" href="pildid/favicon.ico">
     </head>
 <body>
-    <img src="pildid/kaalikas.jpg" alt="kaalikas" width="300">
-    <h1>Paljas kaalikas blog</h1>
+    <img src="pildid/kartul.jpg" alt="kartul" width="300">
+    <h1>Paljas kartul blog</h1>
     <hr>
     <nav>
         <a href="#">Avaleht</a>
@@ -22,7 +21,7 @@
         <tr>
             <td>
                 <h2>Postitus 1</h2>
-                <img src="pildid/mees.jpg" alt="mees" width="250"><br>
+                <img src="pildid/koera.jpg" alt="koer" width="250"><br>
                 <img src="pildid/wordpress.png" alt="wordpress" width="30" height="30">
                 <img src="pildid/twitter.png" alt="twitter" width="30" height="30">
                 <img src="pildid/steam.png" alt="steam" width="30" height="30"><br>
@@ -33,7 +32,7 @@
             </td>
             <td>
                 <h2>Postitus 2</h2>
-                <img src="pildid/mees.jpg" alt="mees" width="250"><br>
+                <img src="pildid/koera.jpg" alt="koer" width="250"><br>
                 <img src="pildid/wordpress.png" alt="wordpress" width="30" height="30">
                 <img src="pildid/twitter.png" alt="twitter" width="30" height="30">
                 <img src="pildid/steam.png" alt="steam" width="30" height="30"><br>
@@ -44,7 +43,7 @@
             </td>
             <td>
                 <h2>Postitus 3</h2>
-                <img src="pildid/mees.jpg" alt="mees" width="250"><br>
+                <img src="pildid/koera.jpg" alt="koer" width="250"><br>
                 <img src="pildid/wordpress.png" alt="wordpress" width="30" height="30">
                 <img src="pildid/twitter.png" alt="twitter" width="30" height="30">
                 <img src="pildid/steam.png" alt="steam" width="30" height="30"><br>
@@ -57,7 +56,7 @@
         </table>
     <hr>
     <nav>
-        <a href="#">Paljas Kaalikas 2022</a>
+        <a href="#">Paljas Kartul 2022</a>
     </nav>
 </body>
 </html>
