--- a/h04/teenused.html
+++ b/h04/teenused.html
@@ -6,11 +6,10 @@
         <title>Harjutus04</title>
         <meta name="keywords" content="HTML,CSS,HTML5,CSS3">
         <meta name="author" content="Jarno Orusalu IT-23">
-        <link rel="shortcut icon" href="../pildid/favicon.ico">
     </head>
 <body>
     <div class="header">
-        <h1>plaas.ee</h1>
+        <h1>orusalu.ee</h1>
         <nav>
             <a href="index.html">Avaleht</a>
             <a href="teenused.html">Teenused</a> 
@@ -20,7 +19,7 @@
     <div class="content">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, minima culpa? Labore voluptates possimus saepe excepturi cum nulla quaerat eveniet, aspernatur sed architecto at voluptas quod inventore est rem suscipit.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe nihil ipsa eveniet quidem eos dolores, consequuntur odit numquam molestias quia sunt illo illum reiciendis nulla nemo explicabo itaque! Modi, in.</p>
-        <iframe width="1023" height="767" src="https://www.youtube.com/embed/J5_HmfZyhKo" title="How to...Make a Perfect Fried Egg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1023" height="767" src="https://www.youtube.com/watch?v=FfPsA9PBHbs" title="How to build a robot in one minute" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="footer">
         <p>&copy; 2025 <a href="https://veebikunn.ee" target="_blank">veebikunn.com</a></p>
